<resources>
    <string name="app_name">ConsultaCEPVolley</string>
    <string name="novoEndereco">Cadastrar novo endereço</string>
    <string name="cep">CEP</string>
    <string name="rua">Rua</string>
    <string name="numero">Número</string>
    <string name="complemento">Complemento</string>
    <string name="bairro">Bairro</string>
    <string name="cidade">Cidade</string>
    <string name="estado">Estado</string>
</resources>