<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt_cadastre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/novoEndereco"
        android:fontFamily="@font/sf_ui_bold"
        android:textColor="#1c1c1c"
        android:textSize="25sp"
        android:layout_marginStart="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.114" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_cep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="30dp"
        android:hint="@string/cep"
        app:boxBackgroundColor="#f5f5f5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_cadastre">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_cep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="8"
            android:inputType="number"
            android:fontFamily="@font/sf_ui_medium"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_rua"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="18dp"
        app:boxBackgroundColor="#f5f5f5"
        android:hint="@string/rua"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_cep">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_rua"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_ui_medium"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_numero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="18dp"
        app:boxBackgroundColor="#f5f5f5"
        android:hint="@string/numero"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_rua">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_numero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_ui_medium"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_complemento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="18dp"
        app:boxBackgroundColor="#f5f5f5"
        android:hint="@string/complemento"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_numero">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_complemento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_ui_medium"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_bairro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="18dp"
        app:boxBackgroundColor="#f5f5f5"
        android:hint="@string/bairro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_complemento">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_bairro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_ui_medium"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_cidade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="18dp"
        app:boxBackgroundColor="#f5f5f5"
        android:hint="@string/cidade"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_bairro">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_cidade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_ui_medium"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_uf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="18dp"
        app:boxBackgroundColor="#f5f5f5"
        android:hint="@string/estado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_cidade">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_uf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_ui_medium"/>

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>